<resources>
    <string name="app_name">比呀比</string>
    <string name="menu_home">首页</string>
    <string name="menu_search">搜索</string>
    <string name="menu_share">逛晒单</string>
    <string name="menu_cart">购物车</string>
    <string name="menu_user">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
