<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="biyabi.activity.MainActivity">

    <LinearLayout
        android:id="@+id/layout_main_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableTop="@drawable/icon_tab_home_grey"
            android:text="@string/menu_home"
            android:textColor="@color/biyabi_text_hint"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/btn_main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableTop="@drawable/icon_tab_search_grey"
            android:text="@string/menu_search"
            android:textColor="@color/biyabi_text_hint"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/btn_main_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableTop="@drawable/icon_tab_shareorder_grey"
            android:text="@string/menu_share"
            android:textColor="@color/biyabi_text_hint"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/btn_main_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableTop="@drawable/icon_tab_cart_grey"
            android:text="@string/menu_cart"
            android:textColor="@color/biyabi_text_hint"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/btn_main_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableTop="@drawable/icon_tab_user_grey"
            android:text="@string/menu_user"
            android:textColor="@color/biyabi_text_hint"
            android:textSize="15sp"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_main_menu">

    </FrameLayout>
</RelativeLayout>